# sf-apis

./: .dockerignore  .gitignore  API.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.sfnb  Dockerfile.sysprint  README.md
avro/: manifest  (+1 more)
py3/: README.md  genPython.py  setup.cfg  setup.py
py3/classes/: __init__.py
py3/classes/actiontype/: __init__.py  schema_classes.py
py3/classes/actiontype/sysflow/type/: __init__.py
py3/classes/containerid/: __init__.py
py3/classes/eventtype/: __init__.py  schema_classes.py
py3/classes/eventtype/sysflow/: __init__.py
py3/classes/eventtype/sysflow/type/: __init__.py
py3/classes/oid/: __init__.py  schema_classes.py
py3/classes/process/: __init__.py  schema_classes.py
py3/classes/process/sysflow/: __init__.py
py3/classes/process/sysflow/entity/: __init__.py
py3/classes/process/sysflow/type/: __init__.py
py3/classes/processflow/: __init__.py  schema_classes.py
py3/classes/processflow/sysflow/flow/: __init__.py
py3/classes/sysflow/: __init__.py  formatter.py  graphlet.py  objtypes.py  openflags.py  opflags.py  reader.py  schema.avsc  schema_classes.py  sfql.py  utils.py
py3/classes/sysflow/grammar/: generate.sh  sfql.g4  sfql.interp  sfql.tokens  sfqlLexer.interp  sfqlLexer.py  sfqlListener.py  sfqlParser.py
py3/classes/sysflow/grammar/.antlr/: sfqlLexer.java  sfqlParser.java
py3/classes/sysflow/sysflow/: __init__.py
py3/classes/sysflow/sysflow/entity/: __init__.py
py3/classes/sysflow/sysflow/event/: __init__.py
py3/classes/sysflow/sysflow/flow/: __init__.py
py3/utils/: sysprint
(+185 files in other folders)
