[metadata]
name = sysflow-tools
version = 0.5.0-rc1
description = SysFlow APIs and utilities
long_description = file:README.md
long_description_content_type = text/markdown
keywords =
    system telemetry
    cloud-native security
    runtime observability
url = https://github.com/sysflow-telemetry
license = Apache 2.0 License
classifiers =
    Topic :: Security
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
	Documentation = https://sysflow.readthedocs.io/

[options]
packages = find:
package_dir =
    =classes
scripts = utils/sysprint
python_requires = >= 3.7
install_requires =
    tabulate>=0.8.9
    minio>=7.0.3
    antlr4-python3-runtime==4.9.2
    dotty-dict>=1.3.0
    pandas>=1.3.0
    frozendict>=2.0.3
    fastavro==1.4.2
    importlib.metadata>=4.12.0

[options.packages.find]
where = classes
